<resources>
    <string name="app_name">TP InmobiliariaBD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_perfil">Mi Perfil</string>
    <string name="menu_inicio">Ubicación</string>
    <string name="menu_inmuebles">Mis Inmuebles</string>
    <string name="menu_contratos">Contratos Vigentes</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_inquilinos">Inquilino</string>
</resources>