<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarContraseniaFragment"
            app:destination="@id/cambiarContraseniaFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_crearInmuebleFragment"
            app:destination="@id/crearInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.contratos.ContratosFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.inmuebles.DetalleInmuebleFragment"
        android:label="Detalles Inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/crearInmuebleFragment"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.inmuebles.CrearInmuebleFragment"
        android:label="Crear Inmueble"
        tools:layout="@layout/fragment_crear_inmueble" >
        <action
            android:id="@+id/action_crearInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.contratos.DetalleContratoFragment"
        android:label="Contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.pagos.PagosFragment"
        android:label="Pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/cambiarContraseniaFragment"
        android:name="com.aprendiendo.tpinmobiliariabd.ui.perfil.CambiarContraseniaFragment"
        android:label="Cambiar Contrasenia"
        tools:layout="@layout/fragment_cambiar_contrasenia" >
        <action
            android:id="@+id/action_cambiarContraseniaFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
</navigation>